Fix inlinefiles names (#87)
* fix: some UI overflowing app when inline file has long name

* fix: more helpful comments

--- a/src/ui/chat/Chat.scss
+++ b/src/ui/chat/Chat.scss
@@ -24,6 +24,7 @@
     .messages-container {
       @extend %flex-col;
       @extend %flex-grow-1;
+      max-width: 100%;
       position: relative;
     }
   }
